roles/kubernetes-management/files/k8s-traefik-demo.yml

kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: whoami-demo-app
  labels:
    app: whoami-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-demo
  template:
    metadata:
      labels:
        app: whoami-demo
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: whoami-demo-service
spec:
  # type: LoadBalancer
  selector:
    app: whoami-demo
  ports:
    - name: web
      targetPort: "web"
      port: 80


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami-demo-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - whoami.smit.org.uk
    secretName: letsencrypt-certs
  rules:
  - host: whoami.smit.org.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami-demo-service
          servicePort: 80
